--- a/_frontend/_engine/blocks/slick.scss
+++ b/_frontend/_engine/blocks/slick.scss
@@ -2,7 +2,7 @@
     width: 42px; height: 42px;
     position: absolute;
     top: 50%;
-    fill: #f6d34b;
+    fill: #ffc928;
     
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
