--- a/_frontend/blocks/_element/style.scss
+++ b/_frontend/blocks/_element/style.scss
@@ -5,7 +5,7 @@
         line-height: 53px;
         margin-bottom: 20px;
         text-align: center;
-        color: #f6cc49;
+        color: #ffc928;
     }
     &__description {}
 }
@@ -19,7 +19,7 @@
 }
 
 .h1 {
-    color: #f6d34b;
+    color: #ffc928;
     font-size: 48px;
     font-weight: 700;
     text-align: center;
