--- a/_frontend/blocks/analog-carousel/style.scss
+++ b/_frontend/blocks/analog-carousel/style.scss
@@ -27,7 +27,7 @@
             position: absolute;
             left: 50%;
             top: auto;
-            fill: #f6d34b;
+            fill: #ffc928;
             transform: translateX(-50%) rotate(90deg);
             cursor: pointer;
         }
