--- a/_frontend/blocks/background-page-product/style.scss
+++ b/_frontend/blocks/background-page-product/style.scss
@@ -17,7 +17,7 @@
         width: 100%;
         height: 320px;
         transform: skewY(20deg);
-        background-color: #f6d34b;
+        background-color: #ffc928;
         opacity: .2;
     }
     .block-left-middle {
@@ -28,7 +28,7 @@
         width: 390px;
         height: 110px;
         transform: skewY(20deg);
-        background-color: #f6d34b;
+        background-color: #ffc928;
         opacity: .2;
     }
     .block-left-bottom {
@@ -39,7 +39,7 @@
         width: 100%;
         height: 600px;
         transform: skewY(20deg);
-        background-color: #f6d34b;
+        background-color: #ffc928;
         opacity: .2;
     }
     .block-right {
@@ -50,7 +50,7 @@
         width: 350px;
         height: 190px;
         transform: skewY(20deg);
-        background-color: #f6d34b;
+        background-color: #ffc928;
         opacity: .2;
     }
     .cheese-right {
