--- a/_frontend/blocks/block-product-img/style.scss
+++ b/_frontend/blocks/block-product-img/style.scss
@@ -39,7 +39,7 @@
 
             }
             &:hover {
-                border: 2px solid #f6d34b;
+                border: 2px solid #ffc928;
             }
         }
         .arrows--next {
