--- a/_frontend/blocks/cheese/style.sass
+++ b/_frontend/blocks/cheese/style.sass
@@ -71,7 +71,7 @@
 .cheese__text-block:after, .cheese__text-block:before 
     content: ''
     position: absolute
-    background: #fdd439
+    background: #ffc928
 
 
 .cheese__text-block:before 
@@ -116,7 +116,7 @@
     bottom: 0
     width: 25px
     height: 2px
-    background: #fdd439
+    background: #ffc928
     transition: width .3s
 
 
@@ -128,7 +128,7 @@
 .cheese__link:hover:before 
     width: 100%
     height: 1px
-    background: #fdd439
+    background: #ffc928
     transition: width .3s
 
 
