--- a/_frontend/blocks/footer/style.scss
+++ b/_frontend/blocks/footer/style.scss
@@ -59,7 +59,7 @@
 
             &:hover {
                 fill: #73662f;
-                background: #facc0e;
+                background: #ffc928;
                 border-color: #c7a119;
             }
         }
