--- a/_frontend/blocks/header/style.scss
+++ b/_frontend/blocks/header/style.scss
@@ -75,7 +75,7 @@
         width: 80%;
         padding: 40px 140px 45px;
         box-shadow: 0 9px 24px rgba(75, 50, 0, .61);
-        background-color: #f6d34b;
+        background-color: #ffc928;
         transition: top .2s;
         border-radius: 0 0 10px 10px;
     
