--- a/_frontend/blocks/popular/style.scss
+++ b/_frontend/blocks/popular/style.scss
@@ -99,7 +99,7 @@
         z-index: -1;
         width: 500px;
         height: 2px;
-        background: #f6d34b;
+        background: #ffc928;
     }
     &:before {
         left: -550px;
