--- a/_frontend/blocks/product-use-carousel/style.scss
+++ b/_frontend/blocks/product-use-carousel/style.scss
@@ -58,7 +58,7 @@
                     width: 90px;
                     height: 2px;
                     border-radius: 1px;
-                    background-color: #f6c647;
+                    background-color: #ffc928;
                     vertical-align: middle;
 
                 }
@@ -115,7 +115,7 @@
                 z-index: 1;
                 width: 500px;
                 height: 2px;
-                background: #f6d34b;
+                background: #ffc928;
             }
             &:before {
                 left: -550px;
