--- a/_frontend/blocks/slider/style.scss
+++ b/_frontend/blocks/slider/style.scss
@@ -37,7 +37,7 @@
         &__text {
             max-width: 380px;
             padding: 40px;
-            border: 10px solid #fdd439;
+            border: 10px solid #ffc928;
             border-radius: 10px;
             color: #fff;
 
@@ -101,12 +101,12 @@
             padding: 0;
             display: block;
             border-radius: 50%;
-            border: 5px solid #f6d34b;
+            border: 5px solid #ffc928;
             background-color: #fff
         }
         .slick-active button {
-            border: 5px solid #f6d34b;
-            background-color: #f6d34b;
+            border: 5px solid #ffc928;
+            background-color: #ffc928;
         }
     }
 }
