--- a/_frontend/blocks/text-brand/style.scss
+++ b/_frontend/blocks/text-brand/style.scss
@@ -10,7 +10,7 @@
         a {
             &:hover {
                 color: inherit;
-                border-bottom: 2px solid #f6d34b;
+                border-bottom: 2px solid #ffc928;
             }
         }
     }
