--- a/css/style.css
+++ b/css/style.css
@@ -853,7 +853,7 @@ ul ul, ol ul, ul ol, ol ol {
   height: 42px;
   position: absolute;
   top: 50%;
-  fill: #f6d34b;
+  fill: #ffc928;
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
   cursor: pointer; }
@@ -951,7 +951,7 @@ div.cs-select {
   position: relative;
   text-align: left;
   background: transparent;
-  border-bottom: 2px solid #f6d34b;
+  border-bottom: 2px solid #ffc928;
   z-index: 100;
   width: 100%;
   max-width: 500px;
@@ -1031,7 +1031,7 @@ div.cs-select:focus {
   background: #fff;
   visibility: hidden; }
   .cs-select .cs-options span:hover {
-    background: #f6cc49; }
+    background: #ffc928; }
 
 .cs-select.cs-active .cs-options {
   visibility: visible; }
@@ -1249,7 +1249,7 @@ input[type="text"]:focus {
     width: 80%;
     padding: 40px 140px 45px;
     box-shadow: 0 9px 24px rgba(75, 50, 0, 0.61);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     transition: top .2s;
     border-radius: 0 0 10px 10px; }
     .header__modal.active {
@@ -1324,7 +1324,7 @@ input[type="text"]:focus {
       border: 1px solid #d5bd57; }
       .footer__social__item:hover {
         fill: #73662f;
-        background: #facc0e;
+        background: #ffc928;
         border-color: #c7a119; }
   .footer .menu-site-map {
     margin-top: 20px; }
@@ -1360,7 +1360,7 @@ input[type="text"]:focus {
   line-height: 53px;
   margin-bottom: 20px;
   text-align: center;
-  color: #f6cc49; }
+  color: #ffc928; }
 
 .h1-product-page {
   margin: 15px auto 34px;
@@ -1370,7 +1370,7 @@ input[type="text"]:focus {
   line-height: 40px; }
 
 .h1 {
-  color: #f6d34b;
+  color: #ffc928;
   font-size: 48px;
   font-weight: 700;
   text-align: center; }
@@ -1593,7 +1593,7 @@ input[type="text"]:focus {
     .slider__item__text {
       max-width: 380px;
       padding: 40px;
-      border: 10px solid #fdd439;
+      border: 10px solid #ffc928;
       border-radius: 10px;
       color: #fff; }
       @media only screen and (max-width: 992px) {
@@ -1645,11 +1645,11 @@ input[type="text"]:focus {
       padding: 0;
       display: block;
       border-radius: 50%;
-      border: 5px solid #f6d34b;
+      border: 5px solid #ffc928;
       background-color: #fff; }
     .slider .dots .slick-active button {
-      border: 5px solid #f6d34b;
-      background-color: #f6d34b; }
+      border: 5px solid #ffc928;
+      background-color: #ffc928; }
 
 .cheese {
   margin-bottom: 150px;
@@ -1720,7 +1720,7 @@ input[type="text"]:focus {
 .cheese__text-block:after, .cheese__text-block:before {
   content: '';
   position: absolute;
-  background: #fdd439; }
+  background: #ffc928; }
 
 .cheese__text-block:before {
   width: 15px;
@@ -1767,7 +1767,7 @@ input[type="text"]:focus {
   bottom: 0;
   width: 25px;
   height: 2px;
-  background: #fdd439;
+  background: #ffc928;
   transition: width .3s; }
 
 .cheese__link:hover {
@@ -1777,7 +1777,7 @@ input[type="text"]:focus {
 .cheese__link:hover:before {
   width: 100%;
   height: 1px;
-  background: #fdd439;
+  background: #ffc928;
   transition: width .3s; }
 
 .cheese .button {
@@ -1961,7 +1961,7 @@ input[type="text"]:focus {
       font-weight: 300;
       background: #fff;
       border: 0;
-      border-bottom: 4px solid #f6cc49; }
+      border-bottom: 4px solid #ffc928; }
     .search__form-mini button {
       position: absolute;
       top: -2px;
@@ -2034,7 +2034,7 @@ input[type="text"]:focus {
     z-index: 1;
     width: 500px;
     height: 2px;
-    background: #f6d34b; }
+    background: #ffc928; }
   .clients__carousel:before {
     left: -550px; }
   .clients__carousel:after {
@@ -2137,7 +2137,7 @@ input[type="text"]:focus {
   z-index: -1;
   width: 500px;
   height: 2px;
-  background: #f6d34b; }
+  background: #ffc928; }
 
 .popular__carousel:before {
   left: -550px; }
@@ -2575,7 +2575,7 @@ input[type="text"]:focus {
     width: 100%;
     height: 210px;
     color: #ffffff;
-    background-color: #f6cc49;
+    background-color: #ffc928;
     border-radius: 10px;
     float: left;
     background-position: center;
@@ -2646,7 +2646,7 @@ input[type="text"]:focus {
     .recommendation__block__line:before {
       content: "";
       position: absolute;
-      background: #fdd439; }
+      background: #ffc928; }
     .recommendation__block__line_down:before {
       left: 0;
       bottom: -100%;
@@ -2903,7 +2903,7 @@ input[type="text"]:focus {
         margin-bottom: 30px; } }
     .product-pagination__pagination li {
       display: inline-block;
-      color: #f6d44d;
+      color: #ffc928;
       font-size: 16px;
       font-style: italic;
       text-align: center;
@@ -2915,14 +2915,14 @@ input[type="text"]:focus {
       padding-top: 13px; }
       .product-pagination__pagination a:hover {
         border-radius: 50%;
-        background-color: #fbdd65;
+        background-color: #ffc928;
         color: #000; }
     .product-pagination__pagination__elem-active {
       border-radius: 50%;
-      background-color: #fbdd65;
+      background-color: #ffc928;
       color: #000; }
     .product-pagination__pagination a.product-pagination__pagination__elem-deactive:hover {
-      color: #f6d44d;
+      color: #ffc928;
       background-color: #fff; }
     .product-pagination__pagination_center {
       text-align: center; }
@@ -2948,7 +2948,7 @@ input[type="text"]:focus {
       position: absolute;
       left: 50%;
       top: auto;
-      fill: #f6d34b;
+      fill: #ffc928;
       transform: translateX(-50%) rotate(90deg);
       cursor: pointer; }
     .tm-carousel__carousel .arrows--prev {
@@ -2967,7 +2967,7 @@ input[type="text"]:focus {
       z-index: 1;
       width: 500px;
       height: 2px;
-      background: #f6d34b; }
+      background: #ffc928; }
     .tm-carousel-horizontal__carousel:before {
       left: -550px; }
     .tm-carousel-horizontal__carousel:after {
@@ -2993,7 +2993,7 @@ input[type="text"]:focus {
     width: 700px;
     height: 110px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page-category .block-left-middle {
     position: absolute;
@@ -3003,7 +3003,7 @@ input[type="text"]:focus {
     width: 250px;
     height: 170px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page-category .cheese-left {
     position: absolute;
@@ -3021,7 +3021,7 @@ input[type="text"]:focus {
     width: 1000px;
     height: 300px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page-category .block-right {
     position: absolute;
@@ -3031,7 +3031,7 @@ input[type="text"]:focus {
     width: 300px;
     height: 280px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page-category .cheese-right {
     position: absolute;
@@ -3129,7 +3129,7 @@ input[type="text"]:focus {
       position: absolute;
       left: 50%;
       top: auto;
-      fill: #f6d34b;
+      fill: #ffc928;
       transform: translateX(-50%) rotate(90deg);
       cursor: pointer; }
     .analog-carousel__carousel .arrows--prev {
@@ -3173,7 +3173,7 @@ input[type="text"]:focus {
       left: 50%;
       transform: translate(-50%, -50%); }
     .block-product-img__carousel__item:hover {
-      border: 2px solid #f6d34b; }
+      border: 2px solid #ffc928; }
   .block-product-img__carousel .arrows--next {
     right: 2px; }
   .block-product-img__carousel .arrows--prev {
@@ -3307,7 +3307,7 @@ input[type="text"]:focus {
           width: 90px;
           height: 2px;
           border-radius: 1px;
-          background-color: #f6c647;
+          background-color: #ffc928;
           vertical-align: middle; }
         .product-use-carousel__carousel__item__block-link a {
           font-size: 16px;
@@ -3350,7 +3350,7 @@ input[type="text"]:focus {
       z-index: 1;
       width: 500px;
       height: 2px;
-      background: #f6d34b; }
+      background: #ffc928; }
     .product-use-carousel_4__carousel:before {
       left: -550px; }
     .product-use-carousel_4__carousel:after {
@@ -3411,7 +3411,7 @@ input[type="text"]:focus {
     width: 100%;
     height: 320px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page-product .block-left-middle {
     position: absolute;
@@ -3421,7 +3421,7 @@ input[type="text"]:focus {
     width: 390px;
     height: 110px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page-product .block-left-bottom {
     position: absolute;
@@ -3431,7 +3431,7 @@ input[type="text"]:focus {
     width: 100%;
     height: 600px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page-product .block-right {
     position: absolute;
@@ -3441,7 +3441,7 @@ input[type="text"]:focus {
     width: 350px;
     height: 190px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page-product .cheese-right {
     position: absolute;
@@ -3605,7 +3605,7 @@ input[type="text"]:focus {
     width: 100%;
     height: 30px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page__block-left-top_about {
     position: absolute;
@@ -3615,7 +3615,7 @@ input[type="text"]:focus {
     width: 100%;
     height: 30px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page__block-left-top_direction {
     position: absolute;
@@ -3625,7 +3625,7 @@ input[type="text"]:focus {
     width: 50%;
     height: 120px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page__block-left-top_event {
     position: absolute;
@@ -3635,7 +3635,7 @@ input[type="text"]:focus {
     width: 33%;
     height: 120px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page__block-left-top_exclusive {
     position: absolute;
@@ -3645,7 +3645,7 @@ input[type="text"]:focus {
     width: 34%;
     height: 105px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page__block-left-middle-top_about {
     position: absolute;
@@ -3655,7 +3655,7 @@ input[type="text"]:focus {
     width: 140px;
     height: 170px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page__block-left-middle_brand {
     position: absolute;
@@ -3665,7 +3665,7 @@ input[type="text"]:focus {
     width: 140px;
     height: 170px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page__block-left-middle_about {
     position: absolute;
@@ -3675,7 +3675,7 @@ input[type="text"]:focus {
     width: 100%;
     height: 250px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page__block-left-middle_direction {
     position: absolute;
@@ -3685,7 +3685,7 @@ input[type="text"]:focus {
     width: 300px;
     height: 170px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page__block-left-middle_event {
     position: absolute;
@@ -3695,7 +3695,7 @@ input[type="text"]:focus {
     width: 270px;
     height: 170px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page__block-left-middle_exclusive {
     position: absolute;
@@ -3705,7 +3705,7 @@ input[type="text"]:focus {
     width: 270px;
     height: 180px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page__block-left-middle-bottom_about {
     position: absolute;
@@ -3715,7 +3715,7 @@ input[type="text"]:focus {
     width: 300px;
     height: 125px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page__block-left-bottom_about {
     position: absolute;
@@ -3725,7 +3725,7 @@ input[type="text"]:focus {
     width: 100%;
     height: 1153px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page__block-left-bottom_direction {
     position: absolute;
@@ -3735,7 +3735,7 @@ input[type="text"]:focus {
     width: 100%;
     height: 400px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page__block-left-bottom_event {
     position: absolute;
@@ -3745,7 +3745,7 @@ input[type="text"]:focus {
     width: 100%;
     height: 400px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page__block-right_brand {
     position: absolute;
@@ -3755,7 +3755,7 @@ input[type="text"]:focus {
     width: 370px;
     height: 420px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page__block-right-top_about {
     position: absolute;
@@ -3765,7 +3765,7 @@ input[type="text"]:focus {
     width: 370px;
     height: 420px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page__block-right-top_direction {
     position: absolute;
@@ -3775,7 +3775,7 @@ input[type="text"]:focus {
     width: 340px;
     height: 270px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page__block-right-top_event {
     position: absolute;
@@ -3785,7 +3785,7 @@ input[type="text"]:focus {
     width: 310px;
     height: 295px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page__block-right-top_exclusive {
     position: absolute;
@@ -3795,7 +3795,7 @@ input[type="text"]:focus {
     width: 310px;
     height: 285px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page__block-right-middle_about {
     position: absolute;
@@ -3805,7 +3805,7 @@ input[type="text"]:focus {
     width: 950px;
     height: 600px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page__block-right-bottom_about {
     position: absolute;
@@ -3815,7 +3815,7 @@ input[type="text"]:focus {
     width: 300px;
     height: 60px;
     transform: skewY(20deg);
-    background-color: #f6d34b;
+    background-color: #ffc928;
     opacity: .2; }
   .background-page__cheese-right_brand {
     position: absolute;
@@ -3901,7 +3901,7 @@ input[type="text"]:focus {
       margin-bottom: 40px; } }
   .text-brand__link a:hover {
     color: inherit;
-    border-bottom: 2px solid #f6d34b; }
+    border-bottom: 2px solid #ffc928; }
 
 .text-about-company {
   padding: 30px 0;
