--- a/_frontend/blocks/background-page-category/style.scss
+++ b/_frontend/blocks/background-page-category/style.scss
@@ -17,7 +17,7 @@
         width: 700px;
         height: 110px;
         transform: skewY(20deg);
-        background-color: #f6d34b;
+        background-color: #ffc928;
         opacity: .2;
     }
     .block-left-middle {
@@ -28,7 +28,7 @@
         width: 250px;
         height: 170px;
         transform: skewY(20deg);
-        background-color: #f6d34b;
+        background-color: #ffc928;
         opacity: .2;
     }
     .cheese-left {
@@ -48,7 +48,7 @@
         width: 1000px;
         height: 300px;
         transform: skewY(20deg);
-        background-color: #f6d34b;
+        background-color: #ffc928;
         opacity: .2;
     }
     .block-right {
@@ -59,7 +59,7 @@
         width: 300px;
         height: 280px;
         transform: skewY(20deg);
-        background-color: #f6d34b;
+        background-color: #ffc928;
         opacity: .2;
     }
     .cheese-right {
