--- a/_frontend/blocks/background-page/style.scss
+++ b/_frontend/blocks/background-page/style.scss
@@ -113,7 +113,7 @@
             width: 100%;
             height: 30px;
             transform: skewY(20deg);
-            background-color: #f6d34b;
+            background-color: #ffc928;
             opacity: .2;
         }
         &_about {
@@ -124,7 +124,7 @@
             width: 100%;
             height: 30px;
             transform: skewY(20deg);
-            background-color: #f6d34b;
+            background-color: #ffc928;
             opacity: .2;
         }
         &_direction {
@@ -135,7 +135,7 @@
             width: 50%;
             height: 120px;
             transform: skewY(20deg);
-            background-color: #f6d34b;
+            background-color: #ffc928;
             opacity: .2;
         }
         &_event {
@@ -146,7 +146,7 @@
             width: 33%;
             height: 120px;
             transform: skewY(20deg);
-            background-color: #f6d34b;
+            background-color: #ffc928;
             opacity: .2;
         }
         &_exclusive {
@@ -157,7 +157,7 @@
             width: 34%;
             height: 105px;
             transform: skewY(20deg);
-            background-color: #f6d34b;
+            background-color: #ffc928;
             opacity: .2;
         }
     }
@@ -170,7 +170,7 @@
             width: 140px;
             height: 170px;
             transform: skewY(20deg);
-            background-color: #f6d34b;
+            background-color: #ffc928;
             opacity: .2;
         }
     }
@@ -183,7 +183,7 @@
             width: 140px;
             height: 170px;
             transform: skewY(20deg);
-            background-color: #f6d34b;
+            background-color: #ffc928;
             opacity: .2;
         }
         &_about {
@@ -194,7 +194,7 @@
             width: 100%;
             height: 250px;
             transform: skewY(20deg);
-            background-color: #f6d34b;
+            background-color: #ffc928;
             opacity: .2;
         }
         &_direction {
@@ -205,7 +205,7 @@
             width: 300px;
             height: 170px;
             transform: skewY(20deg);
-            background-color: #f6d34b;
+            background-color: #ffc928;
             opacity: .2;
         }
         &_event {
@@ -216,7 +216,7 @@
             width: 270px;
             height: 170px;
             transform: skewY(20deg);
-            background-color: #f6d34b;
+            background-color: #ffc928;
             opacity: .2;
         }
         &_exclusive {
@@ -227,7 +227,7 @@
             width: 270px;
             height: 180px;
             transform: skewY(20deg);
-            background-color: #f6d34b;
+            background-color: #ffc928;
             opacity: .2;
         }
     }
@@ -240,7 +240,7 @@
             width: 300px;
             height: 125px;
             transform: skewY(20deg);
-            background-color: #f6d34b;
+            background-color: #ffc928;
             opacity: .2;
         }
     }
@@ -253,7 +253,7 @@
             width: 100%;
             height: 1153px;
             transform: skewY(20deg);
-            background-color: #f6d34b;
+            background-color: #ffc928;
             opacity: .2;
         }
         &_direction {
@@ -264,7 +264,7 @@
             width: 100%;
             height: 400px;
             transform: skewY(20deg);
-            background-color: #f6d34b;
+            background-color: #ffc928;
             opacity: .2;
         }
         &_event {
@@ -275,7 +275,7 @@
             width: 100%;
             height: 400px;
             transform: skewY(20deg);
-            background-color: #f6d34b;
+            background-color: #ffc928;
             opacity: .2;
         }
     }
@@ -288,7 +288,7 @@
             width: 370px;
             height: 420px;
             transform: skewY(20deg);
-            background-color: #f6d34b;
+            background-color: #ffc928;
             opacity: .2;
         }
         &-top {
@@ -300,7 +300,7 @@
                 width: 370px;
                 height: 420px;
                 transform: skewY(20deg);
-                background-color: #f6d34b;
+                background-color: #ffc928;
                 opacity: .2;
             }
             &_direction {
@@ -311,7 +311,7 @@
                 width: 340px;
                 height: 270px;
                 transform: skewY(20deg);
-                background-color: #f6d34b;
+                background-color: #ffc928;
                 opacity: .2;
             }
             &_event {
@@ -322,7 +322,7 @@
                 width: 310px;
                 height: 295px;
                 transform: skewY(20deg);
-                background-color: #f6d34b;
+                background-color: #ffc928;
                 opacity: .2;
             }
             &_exclusive {
@@ -333,7 +333,7 @@
                 width: 310px;
                 height: 285px;
                 transform: skewY(20deg);
-                background-color: #f6d34b;
+                background-color: #ffc928;
                 opacity: .2;
             }
         }
@@ -346,7 +346,7 @@
                 width: 950px;
                 height: 600px;
                 transform: skewY(20deg);
-                background-color: #f6d34b;
+                background-color: #ffc928;
                 opacity: .2;
             }
         }
@@ -359,7 +359,7 @@
                 width: 300px;
                 height: 60px;
                 transform: skewY(20deg);
-                background-color: #f6d34b;
+                background-color: #ffc928;
                 opacity: .2;
             }
         }
